--- a/aula01-mp4demuxer-canvas-rendere/app/pages/file-upload/index.html
+++ b/aula01-mp4demuxer-canvas-rendere/app/pages/file-upload/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-BR">
 
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>JSExpert Hub</title>
   <link rel="stylesheet" href="./../_globals/globals.css" />
   <link rel="stylesheet" href="style.css" />
 </head>
+
 
 <body>
   <div class="desktop">
